[tool.poetry]
name = "colibrie"
version = "1.2"
description = "Colibrie is a blazing fast tool to extract tables from PDFs"
authors = ["Alexandre Bitoun <alexandre.bitoun@outlook.fr>"]
readme = "README.md"
license = "MIT"
repository="https://github.com/abitoun-42/colibrie"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Cython = "^3.1.2"
PyMuPDF = "^1.20.2"
numpy = "^1.23.3"
pandas = "^2.0.0"
Pillow = "^10.3.0"
ailist = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"